Bug 1622032.  Improve some error messages in nsINode. r=nika

In particular, improve the error message for replaceChild when the two arguments get switched.

Differential Revision: https://phabricator.services.mozilla.com/D66640